前端显示与列表完工

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}500 Error{% endblock %}
-{% block pageTitle %}500 Error Page{% endblock %}
+{% block title %}500 错误{% endblock %}
+{% block pageTitle %}500 错误{% endblock %}
 {% block main %}
     <div class="error-page">
         <h2 class="headline text-red"> 500</h2>
