--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}404 Error{% endblock %}
-{% block pageTitle %}404 Error Page{% endblock %}
+{% block title %}404 错误{% endblock %}
+{% block pageTitle %}404 错误{% endblock %}
 {% block main %}
     <div class="error-page">
         <h2 class="headline text-red"> 404</h2>
