--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                <a class="nav-link" id="menu" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -26,7 +26,7 @@
                 <a class="nav-link" data-toggle="dropdown" href="#">
                     <i class="fas fa-qrcode"></i>
                 </a>
-                <div class="dropdown-menu" style="width: 182px">
+                <div class="dropdown-menu dropdown-menu-right" style="width: 182px">
                     <img width="180px" align="center" src="/static/qrcode.jpg">
                     <div align="center">
                         手机扫码同步预览<br>
@@ -65,22 +65,6 @@
                             </p>
                         </a>
                     </li>
-                    <li class="nav-item" id="nav-connect">
-                        <a href="/connect" class="nav-link">
-                            <i class="nav-icon fas fa-bolt"></i>
-                            <p>
-                                新增配置
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item" id="nav-log">
-                        <a href="/log" class="nav-link">
-                            <i class="nav-icon fas fa-list"></i>
-                            <p>
-                                连接状况
-                            </p>
-                        </a>
-                    </li>
                     <li class="nav-item" id="nav-chart">
                         <a href="/chart" class="nav-link">
                             <i class="nav-icon fas fa-chart-line"></i>
@@ -98,10 +82,10 @@
         <div class="content-header">
             <div class="container-fluid">
                 <div class="row mb-2">
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <h1 class="m-0">{% block pageTitle %}{% endblock %}</h1>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">
                         <ol class="breadcrumb float-sm-right">
                             {% block float_right %}{% endblock %}
                         </ol>
