更换到多进程框架，主要功能完工，下一步进行前端性能优化

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -104,7 +104,7 @@
                         type: 'line',
                         name: name,
                         data: d[name],
-                        sampling: 'lttb',
+                        //sampling: 'lttb',
                         showSymbol: false
                     })
                 }
@@ -189,7 +189,6 @@
             }, 300)
         })
 
-        const websocket_url = 'http"//' + document.domain + ':' + location.port + '/ws';
         const socket = io('/ws');
         socket.on('data', function (data) {
             if (!paused) {
