--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}仪表盘{% endblock %}
+{% block pageTitle %}仪表盘{% endblock %}
+{% block main %}
+    <div class="row">
+        <div class="col-md-5">
+            <div class="card card-primary">
+                <div class="card-header">
+                    <h3 class="card-title">主程序更新</h3>
+                </div>
+                <div class="card-body">
+                    过会再写
+                </div>
+                <div class="card-footer">
+                    马上更新
+                </div>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">插件更新</h3>
+                </div>
+                <div class="card-body">
+                    过会再写
+                </div>
+                <div class="card-footer">
+                    马上更新
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">插件商店</h3>
+                </div>
+                <div class="card-body">
+                    过会再写
+                </div>
+                <div class="card-footer">
+                    马上更新
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
