修复了报错信息过长时前端无法显示的问题

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
         reserved.
     </footer>
 </div>
-<div id="mbox" class="modal fade show" role="dialog" style="padding-right: 16px; display: none;" aria-modal="true">
+<div id="mbox" class="modal fade show" role="dialog" style="padding-right: 16px; display: none; width: 500px; height: 350px; overflow: auto" aria-modal="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content bg-default">
             <div class="modal-header">
